# AzureHayMaker

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  100_COMMITS_CENTENNIAL_ACHIEVEMENT.md  106_COMMITS_FINAL_STATUS.txt  93_COMMITS_LEGENDARY_STATUS.md  98_COMMITS_ULTIMATE_COMPLETION.md  ABSOLUTE_FINAL_STATUS.txt  ACHIEVEMENTS.md  ACTIVE_DEPLOYMENT_STATUS.md  ARCHITECTURE_DIAGRAM.md  ARCHITECTURE_MONITORING_LAYERS.md  BEST_PRACTICES.md  CHANGELOG.md  COMMIT_HISTORY_ANALYSIS.md  CONFIGURATION_SUMMARY.md  CONTAINER_APPS_ARCHITECTURE.md  CONTAINER_APPS_DEPLOYMENT_PROGRESS.md  CONTAINER_APPS_DEPLOYMENT_SUCCESS.md  CONTAINER_APPS_IMPLEMENTATION_SUMMARY.md  CONTAINER_APPS_SUCCESS.md  CONTAINER_MANAGER_ARCHITECTURE.md  CONTAINER_STARTUP_INVESTIGATION.md  CONTRIBUTING.md  COST_ANALYSIS.md  CRITICAL_COST_ALERT.md  CRITICAL_STATUS_REPORT.md  DEPLOYMENT_128GB_VM.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_IN_PROGRESS.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_STATUS_UPDATED.md  DEPLOYMENT_VALIDATION.md  DESIGN_DECISIONS.md  DOCUMENTATION_INDEX.md  EMAIL_TEMPLATE.md  EPIC_SESSION_COMPLETE.txt  (+66 more)
.claude/: settings.json
.claude.backup.20251119_115010/runtime/metrics/: pre_compact_metrics.jsonl  session_start_metrics.jsonl  stop_metrics.jsonl
.claude.backup.20251119_121212/runtime/metrics/: session_start_metrics.jsonl  stop_metrics.jsonl
.claude.backup.20251119_123003/runtime/metrics/: session_start_metrics.jsonl
.claude.backup.20251119_123558/runtime/metrics/: post_tool_use_metrics.jsonl  session_start_metrics.jsonl
.claude.backup.20251120_142831/runtime/metrics/: post_tool_use_metrics.jsonl  session_start_metrics.jsonl
.claude.backup.20251120_164157/context/: PROJECT.md
.claude.backup.20251121_035514/: settings.json
.claude.backup.20251121_101057/: settings.json
.claude.backup.20251122_110405/context/: PROJECT.md
.claude/context/: DISCOVERIES.md  PROJECT.md
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  SUPPORT.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: deploy-containerapps.yml  deploy-dev.yml  deploy-prod.yml  deploy-staging.yml  deploy-vm-orchestrator.yml  validate-pr.yml
cli/: README.md  pyproject.toml
cli/src/: host.json
cli/src/haymaker_cli/: __init__.py  auth.py  client.py  config.py  formatters.py  main.py  models.py
cli/src/haymaker_cli/orch/: __init__.py  client.py  commands.py  config.py  formatters.py  health.py  models.py
cli/tests/: test_client.py
deployments/: active
deployments/9dbe9957-940b-487e-9149-8d8b2b90c709/: status.xml
docs/: ARCHITECTURE.md  CLI_DIAGNOSTIC_COMMANDS_INDEX.md  CLI_DIAGNOSTIC_COMMANDS_PROMPT.md  CLI_DIAGNOSTIC_COMMANDS_REQUIREMENTS.md  CLI_DIAGNOSTIC_COMMANDS_SUMMARY.md  CLI_DIAGNOSTIC_FEATURES_SPEC.md  CLI_GUIDE.md  CONTAINER_APPS_STATUS.md  DEPLOYMENT.md  FUNCTION_APP_STRUCTURE.md  GETTING_STARTED.md  GITOPS_SETUP.md  ON_DEMAND_EXECUTION.md  SCENARIO_MANAGEMENT.md  SECURITY_FIXES.md
docs/architecture/: orchestrator.md
docs/presentations/: Azure_HayMaker_Overview.pptx  README.md
docs/scenarios/: SCALING_PLAN.md  SCENARIO_TEMPLATE.md  ai-ml-01-cognitive-services-vision.md  ai-ml-04-ml-workspace.md  ai-ml-05-bot-service.md  analytics-02-realtime-streaming.md  analytics-03-synapse-analytics.md  compute-02-windows-vm-iis.md  compute-04-azure-functions-http.md  containers-01-simple-web-app.md  containers-02-aks-cluster.md  containers-05-multi-container-app.md  databases-02-cosmos-db.md  databases-03-postgresql.md  databases-04-redis-cache.md  hybrid-02-site-recovery.md  hybrid-05-azure-migrate.md  identity-03-entra-users-groups.md  networking-03-load-balancer.md  networking-04-application-gateway.md  security-01-key-vault-secrets.md  security-02-entra-id-groups.md  security-03-network-security-groups.md  security-04-managed-identity.md  webapps-01-static-website.md  webapps-05-api-management.md
infra/: README.md
infra/bicep/: main-containerapps.bicep  main-containerapps.json  main-vm.bicep  main-vm.json  main.bicep  main.json
presentation-assets/: ARCHITECTURE_DIAGRAMS.md  CLI_EXAMPLES_TO_CAPTURE.md  COVER_IMAGE_INSTRUCTIONS.md  README.md
presentation-assets/diagrams/: 01-high-level-architecture.mmd  02-secret-management-fix.mmd  03-agent-execution-flow.mmd  04-gitops-workflow.mmd
scripts/: README.md  backup-key-vault-secrets.sh  check-infrastructure.sh  cleanup-old-function-apps.sh  complete-cleanup.sh  estimate-costs.sh  generate-readme-badges.sh  generate_agents_simple.sh  generate_all_agents.sh  health-check.sh  list-all-resources.sh  open-powerpoint.sh  setup-oidc.sh  show-session-summary.sh  update-all-scripts.sh  verify-security-fix.sh
specs/: api-design.md  architecture.md  feature-specifications.md  initial-prompt.md  requirements.md
src/: .funcignore  Dockerfile  function_app.py  host.json  requirements.txt
src/azure_haymaker/: __init__.py
tests/: conftest.py  test_function_discovery.py  test_placeholder.py  test_security.py
tests/integration/: test_end_to_end.py  test_on_demand_execution.py
tests/unit/: test_cleanup.py  test_config.py  test_config_env_loader.py  test_container_manager.py  test_event_bus.py  test_execute_api.py  test_execution_tracker.py  test_metrics_api.py  test_models_config.py  test_models_scenario.py  test_monitoring_api.py  test_orchestrator.py  test_rate_limiter.py  test_scenario_selector.py  test_sp_manager.py  test_validation.py
workspace/: create_presentation.js  package-lock.json
(+359 files in other folders)
